# tldr

./: .gitignore  Cargo.toml  Dockerfile  README.md  urls.json
src/: main.rs  rocket_builder.rs
src/api/: catchers.rs  guards.rs  mod.rs
src/api/endpoints/: mod.rs  redirections.rs  urls.rs  utils.rs
src/core/: entities.rs  mod.rs
src/entities/: entities.rs
src/pkg/: mod.rs
src/pkg/db/: json.rs
src/pkg/repository/: mod.rs  repository.rs
src/pkg/service/: mod.rs  service.rs
