[package]
name = "ieeely"
version = "0.1.0"
authors = ["vi_mi <fenil.jain2018@vitstudent.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# hyper = { version = "0.14", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = "0.4.8"
anyhow = "1.0"
regex = "1.5"
